--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "5.0.*",
-		"axel-php/axel": "^0.0.10"
+		"axel-php/axel": "^0.0.10",
+		"illuminate/html": "^5.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
