--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"laravel/framework": "5.0.*",
 		"axel-php/axel": "^0.0.10",
-		"illuminate/html": "^5.0"
+		"illuminate/html": "^5.0",
+        "pda/pheanstalk": "~3.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
