--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "5.0.*",
-		"axel-php/axel": "^0.0.10",
+		"axel-php/axel": "0.0.*",
 		"illuminate/html": "^5.0",
         "pda/pheanstalk": "~3.0"
 	},
