--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate",
-  "version": "0.0.0",
-  "homepage": "https://github.com/ianoshorty/Laravel-Boilerplate",
+  "name": "rpvr-php",
+  "version": "0.0.1",
+  "homepage": "https://github.com/ianoshorty/rpvr-php",
   "authors": [
     "Ian Outterside <ianoshorty@gmail.com>"
   ],
@@ -17,6 +17,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap-sass": "~3.3.4"
+    "bootstrap-sass": "~3.3.4",
+    "socket.io-client": "~1.3.5"
   }
 }
