--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "private": true,
+  "dependancies": {
+
+  },
   "devDependencies": {
     "gulp": "^3.8.8",
     "laravel-elixir": "^1.0.0",
-    "laravel-elixir-browser-sync": "^0.1.6"
+    "laravel-elixir-browser-sync": "^0.1.6",
+    "express": "^4.10.2",
+    "socket.io": "^1.3.5",
+    "ioredis": "^1.4.0"
   }
 }
